--- a/.AppData/Roaming/Code/User/settings.json
+++ b/.AppData/Roaming/Code/User/settings.json
@@ -64,8 +64,10 @@
 		"defaultViewMode": "tree",
 		"alwaysShowProviders": true,
 		"commitMessageGeneration": {
-			"provider": "cody",
-			"useProjectContext": true
+			"provider": "copilot" // Включено для Copilot
+			// Отключено для использования только Copilot. Для возврата — раскомментируйте.
+			// "provider": "cody",
+			// "useProjectContext": true
 		}
 	},
 
@@ -137,9 +139,7 @@
 					"enabled": false
 				},
 				"commitMessageGeneration": {
-					// ОТКЛЮЧАЕМ генерацию commit сообщений в Copilot, чтобы использовать Cody
-					"enabled": false
-					// Удаляем старые инструкции, так как теперь используем Cody
+					"enabled": true // Включено для Copilot
 				}
 			},
 			"enable": {
@@ -282,213 +282,214 @@
 		2. Загружаются специфичные правила из CODY_PROJECT_CONTEXT.md
 		3. При конфликте приоритет у проектных правил
 	*/
-	"cody": {
-		// ========== НАСТРОЙКИ АВТОДОПОЛНЕНИЯ ==========
-		"autocomplete": {
-			// Главный переключатель автодополнения кода
-			"enabled": true,
+	// Отключено для использования только Copilot. Для возврата — раскомментируйте.
+	// "cody": {
+	// 	// ========== НАСТРОЙКИ АВТОДОПОЛНЕНИЯ ==========
+	// 	"autocomplete": {
+	// 		// Главный переключатель автодополнения кода
+	// 		"enabled": true,
 
-			// Настройки для конкретных языков программирования
-			"languages": {
-				"*": true, // Включено для всех языков по умолчанию
-				"plaintext": false, // Отключено для обычного текста
-				"markdown": false, // Отключено для Markdown файлов
-				"json": true, // Включено для JSON
-				"typescript": true, // Включено для TypeScript
-				"javascript": true // Включено для JavaScript
-			},
+	// 		// Настройки для конкретных языков программирования
+	// 		"languages": {
+	// 			"*": true, // Включено для всех языков по умолчанию
+	// 			"plaintext": false, // Отключено для обычного текста
+	// 			"markdown": false, // Отключено для Markdown файлов
+	// 			"json": true, // Включено для JSON
+	// 			"typescript": true, // Включено для TypeScript
+	// 			"javascript": true // Включено для JavaScript
+	// 		},
 
-			// Задержка в миллисекундах перед показом предложений
-			// Меньше = быстрее отклик, но больше запросов к серверу
-			// Больше = меньше нагрузка, но медленнее отклик
-			"debounceInterval": 75,
+	// 		// Задержка в миллисекундах перед показом предложений
+	// 		// Меньше = быстрее отклик, но больше запросов к серверу
+	// 		// Больше = меньше нагрузка, но медленнее отклик
+	// 		"debounceInterval": 75,
 
-			// Максимальное количество предложений автодополнения
-			// Меньше = быстрее загрузка, больше = больше вариантов
-			"maxItems": 3,
+	// 		// Максимальное количество предложений автодополнения
+	// 		// Меньше = быстрее загрузка, больше = больше вариантов
+	// 		"maxItems": 3,
 
-			// Минимальная длина текста для начала автодополнения
-			"minTriggerLength": 2
-		},
+	// 		// Минимальная длина текста для начала автодополнения
+	// 		"minTriggerLength": 2
+	// 	},
 
-		// ========== ДЕЙСТВИЯ С КОДОМ ==========
-		// Включает предложения действий с кодом (рефакторинг, исправления)
-		// Появляются как лампочки в редакторе при наведении на код
-		"codeActions.enabled": true,
+	// 	// ========== ДЕЙСТВИЯ С КОДОМ ==========
+	// 	// Включает предложения действий с кодом (рефакторинг, исправления)
+	// 	// Появляются как лампочки в редакторе при наведении на код
+	// 	"codeActions.enabled": true,
 
-		// ========== ЛИНЗЫ КОМАНД ==========
-		// Показывает интерактивные ссылки над функциями и классами
-		// Позволяет быстро вызвать Cody для объяснения или рефакторинга
-		"commandCodeLenses": true,
+	// 	// ========== ЛИНЗЫ КОМАНД ==========
+	// 	// Показывает интерактивные ссылки над функциями и классами
+	// 	// Позволяет быстро вызвать Cody для объяснения или рефакторинга
+	// 	"commandCodeLenses": true,
 
-		// ========== НАСТРОЙКИ ЧАТА И COMMIT СООБЩЕНИЙ ==========
-		"chat": {
-			// Язык интерфейса чата
-			"locale": "ru",
+	// 	// ========== НАСТРОЙКИ ЧАТА И COMMIT СООБЩЕНИЙ ==========
+	// 	"chat": {
+	// 		// Язык интерфейса чата
+	// 		"locale": "ru",
 
-			// Настройки генерации commit сообщений
-			"commitMessage": {
-				// Основной язык для сообщений
-				"language": "ru",
+	// 		// Настройки генерации commit сообщений
+	// 		"commitMessage": {
+	// 			// Основной язык для сообщений
+	// 			"language": "ru",
 
-				// Инструкции для генерации commit сообщений
-				"instructions": [
-					// === ОСНОВНЫЕ ПРАВИЛА ===
-					"Генерируй commit сообщения ТОЛЬКО на русском языке в повелительном наклонении (инфинитив)",
-					"Формат: 'Действие описание' (БЕЗ двоеточия, БЕЗ точки в конце)",
-					"Максимум 50 символов для заголовка",
+	// 			// Инструкции для генерации commit сообщений
+	// 			"instructions": [
+	// 				// === ОСНОВНЫЕ ПРАВИЛА ===
+	// 				"Генерируй commit сообщения ТОЛЬКО на русском языке в повелительном наклонении (инфинитив)",
+	// 				"Формат: 'Действие описание' (БЕЗ двоеточия, БЕЗ точки в конце)",
+	// 				"Максимум 50 символов для заголовка",
 
-					// === ДЕЙСТВИЯ ===
-					"Используй действия: добавить, исправить, обновить, удалить, рефакторить, оптимизировать, документировать, тестировать, настроить, стилизовать",
+	// 				// === ДЕЙСТВИЯ ===
+	// 				"Используй действия: добавить, исправить, обновить, удалить, рефакторить, оптимизировать, документировать, тестировать, настроить, стилизовать",
 
-					// === ЗАПРЕТЫ ===
-					"НЕ используй префиксы feat:, fix:, docs:, chore:",
-					"НЕ используй повелительное наклонение с 'й' (добавь, исправь)",
-					"НЕ используй прошедшее время (добавил, исправил)",
+	// 				// === ЗАПРЕТЫ ===
+	// 				"НЕ используй префиксы feat:, fix:, docs:, chore:",
+	// 				"НЕ используй повелительное наклонение с 'й' (добавь, исправь)",
+	// 				"НЕ используй прошедшее время (добавил, исправил)",
 
-					// === АНАЛИЗ ИЗМЕНЕНИЙ ===
-					"Анализируй git diff и структуру проекта для понимания технологического стека",
-					"Адаптируй терминологию под используемые технологии",
-					"Для новых файлов: 'Добавить [тип] [название]'",
-					"Для исправлений: 'Исправить [проблему] в [компоненте]'",
-					"Для рефакторинга: 'Рефакторить [компонент] для [цели]'",
+	// 				// === АНАЛИЗ ИЗМЕНЕНИЙ ===
+	// 				"Анализируй git diff и структуру проекта для понимания технологического стека",
+	// 				"Адаптируй терминологию под используемые технологии",
+	// 				"Для новых файлов: 'Добавить [тип] [название]'",
+	// 				"Для исправлений: 'Исправить [проблему] в [компоненте]'",
+	// 				"Для рефакторинга: 'Рефакторить [компонент] для [цели]'",
 
-					// === ТЕХНОЛОГИИ (примеры) ===
-					"Для React/React Native: 'Добавить компонент UserProfile'",
-					"Для API: 'Исправить валидацию в POST /users'",
-					"Для базы данных: 'Добавить миграцию для таблицы users'",
-					"Для конфигурации: 'Настроить webpack для production'",
-					"Для стилей: 'Обновить CSS для мобильных устройств'",
+	// 				// === ТЕХНОЛОГИИ (примеры) ===
+	// 				"Для React/React Native: 'Добавить компонент UserProfile'",
+	// 				"Для API: 'Исправить валидацию в POST /users'",
+	// 				"Для базы данных: 'Добавить миграцию для таблицы users'",
+	// 				"Для конфигурации: 'Настроить webpack для production'",
+	// 				"Для стилей: 'Обновить CSS для мобильных устройств'",
 
-					// === ПРИМЕРЫ ===
-					"Примеры: 'Добавить валидацию email', 'Исправить ошибку деления на ноль', 'Обновить зависимости проекта'"
-				],
+	// 				// === ПРИМЕРЫ ===
+	// 				"Примеры: 'Добавить валидацию email', 'Исправить ошибку деления на ноль', 'Обновить зависимости проекта'"
+	// 			],
 
-				// Автоматически включать контекстные файлы при генерации commit
-				"includeContext": true,
+	// 			// Автоматически включать контекстные файлы при генерации commit
+	// 			"includeContext": true,
 
-				// Файлы с дополнительными инструкциями (ОБНОВЛЕНО: новый путь)
-				"contextFiles": [
-					".cody/CODY_CONTEXT.md",
-					".cody/CODY_PROJECT_CONTEXT.md"
-				],
+	// 			// Файлы с дополнительными инструкциями (ОБНОВЛЕНО: новый путь)
+	// 			"contextFiles": [
+	// 				".cody/CODY_CONTEXT.md",
+	// 				".cody/CODY_PROJECT_CONTEXT.md"
+	// 			],
 
-				// Анализировать изменения в коде для лучшего понимания
-				"analyzeChanges": true,
+	// 			// Анализировать изменения в коде для лучшего понимания
+	// 			"analyzeChanges": true,
 
-				// Максимальная длина сообщения
-				"maxLength": 50,
+	// 			// Максимальная длина сообщения
+	// 			"maxLength": 50,
 
-				// Включить детальное описание (если нужно)
-				"includeDescription": false
-			},
+	// 			// Включить детальное описание (если нужно)
+	// 			"includeDescription": false
+	// 		},
 
-			// Максимальное количество сообщений в истории чата
-			"maxHistoryLength": 100,
+	// 		// Максимальное количество сообщений в истории чата
+	// 		"maxHistoryLength": 100,
 
-			// Включить дополнительные вопросы после ответов
-			"followUpQuestions": true,
+	// 		// Включить дополнительные вопросы после ответов
+	// 		"followUpQuestions": true,
 
-			// Автоматически загружать контекстные инструкции
-			"autoLoadContext": true,
+	// 		// Автоматически загружать контекстные инструкции
+	// 		"autoLoadContext": true,
 
-			// Префикс для каждого запроса (будет добавляться автоматически)
-			"systemPrompt": "Используй инструкции из файлов .cody/CODY_CONTEXT.md (общие правила) и .cody/CODY_PROJECT_CONTEXT.md (правила проекта). При конфликте настроек приоритет у правил проекта из CODY_PROJECT_CONTEXT.md.",
+	// 		// Префикс для каждого запроса (будет добавляться автоматически)
+	// 		"systemPrompt": "Используй инструкции из файлов .cody/CODY_CONTEXT.md (общие правила) и .cody/CODY_PROJECT_CONTEXT.md (правила проекта). При конфликте настроек приоритет у правил проекта из CODY_PROJECT_CONTEXT.md.",
 
-			// Файлы с инструкциями, которые нужно читать перед каждым ответом
-			"instructionFiles": [
-				".cody/CODY_CONTEXT.md",
-				".cody/CODY_PROJECT_CONTEXT.md"
-			]
-		},
+	// 		// Файлы с инструкциями, которые нужно читать перед каждым ответом
+	// 		"instructionFiles": [
+	// 			".cody/CODY_CONTEXT.md",
+	// 			".cody/CODY_PROJECT_CONTEXT.md"
+	// 		]
+	// 	},
 
-		// Настройки для интеграции с Git
-		"git": {
-			"commitMessageGeneration": {
-				"enabled": true,
-				"useContextFiles": true,
-				"followProjectRules": true
-			}
-		},
+	// 	// Настройки для интеграции с Git
+	// 	"git": {
+	// 		"commitMessageGeneration": {
+	// 			"enabled": true,
+	// 			"useContextFiles": true,
+	// 			"followProjectRules": true
+	// 		}
+	// 	},
 
-		// ========== НАСТРОЙКИ ПРОИЗВОДИТЕЛЬНОСТИ ==========
-		"performance": {
-			// Максимальное время ожидания ответа от сервера (в миллисекундах)
-			"timeout": 10000,
+	// 	// ========== НАСТРОЙКИ ПРОИЗВОДИТЕЛЬНОСТИ ==========
+	// 	"performance": {
+	// 		// Максимальное время ожидания ответа от сервера (в миллисекундах)
+	// 		"timeout": 10000,
 
-			// Максимальное количество одновременных запросов
-			"maxConcurrentRequests": 3,
+	// 		// Максимальное количество одновременных запросов
+	// 		"maxConcurrentRequests": 3,
 
-			// Размер кэша для хранения ответов
-			"cacheSize": 100
-		},
+	// 		// Размер кэша для хранения ответов
+	// 		"cacheSize": 100
+	// 	},
 
-		// ========== ПРИВАТНОСТЬ ==========
-		"telemetry": {
-			// Уровень сбора телеметрии
-			// "off" = полностью отключено (соответствует вашим настройкам)
-			// "basic" = только основная статистика
-			// "full" = полная телеметрия
-			"level": "off"
-		},
+	// 	// ========== ПРИВАТНОСТЬ ==========
+	// 	"telemetry": {
+	// 		// Уровень сбора телеметрии
+	// 		// "off" = полностью отключено (соответствует вашим настройкам)
+	// 		// "basic" = только основная статистика
+	// 		// "full" = полная телеметрия
+	// 		"level": "off"
+	// 	},
 
-		// ========== ОТЛАДКА И ДИАГНОСТИКА ==========
-		"debug": {
-			// Включает режим отладки для диагностики проблем
-			// Полезно если Cody работает некорректно
-			"enabled": false,
+	// 	// ========== ОТЛАДКА И ДИАГНОСТИКА ==========
+	// 	"debug": {
+	// 		// Включает режим отладки для диагностики проблем
+	// 		// Полезно если Cody работает некорректно
+	// 		"enabled": false,
 
-			// Подробное логирование всех операций
-			// Создает много логов - использовать только при необходимости
-			"verbose": false
-		},
+	// 		// Подробное логирование всех операций
+	// 		// Создает много логов - использовать только при необходимости
+	// 		"verbose": false
+	// 	},
 
-		// ========== ЭКСПЕРИМЕНТАЛЬНЫЕ ФУНКЦИИ ==========
-		"experimental": {
-			// Улучшенное понимание контекста кода
-			"enhancedContext": true,
+	// 	// ========== ЭКСПЕРИМЕНТАЛЬНЫЕ ФУНКЦИИ ==========
+	// 	"experimental": {
+	// 		// Улучшенное понимание контекста кода
+	// 		"enhancedContext": true,
 
-			// Предложения на основе истории использования
-			"historySuggestions": true,
+	// 		// Предложения на основе истории использования
+	// 		"historySuggestions": true,
 
-			// Интеграция с системой контроля версий
-			"gitIntegration": true,
+	// 		// Интеграция с системой контроля версий
+	// 		"gitIntegration": true,
 
-			// Кэширование ответов для ускорения работы
-			"responseCache": true,
+	// 		// Кэширование ответов для ускорения работы
+	// 		"responseCache": true,
 
-			// Экспериментальная генерация commit сообщений
-			"commitMessageGeneration": true,
+	// 		// Экспериментальная генерация commit сообщений
+	// 		"commitMessageGeneration": true,
 
-			// Улучшенный анализ git diff для commit сообщений
-			"enhancedGitAnalysis": true,
+	// 		// Улучшенный анализ git diff для commit сообщений
+	// 		"enhancedGitAnalysis": true,
 
-			// Контекстно-зависимые commit сообщения
-			"contextAwareCommits": true,
+	// 		// Контекстно-зависимые commit сообщения
+	// 		"contextAwareCommits": true,
 
-			// Автоматическое включение файлов проекта в контекст для commit
-			"autoIncludeProjectContext": true
-		},
+	// 		// Автоматическое включение файлов проекта в контекст для commit
+	// 		"autoIncludeProjectContext": true
+	// 	},
 
-		// Автоматическое включение контекстных файлов
-		"context": {
-			// Автоматически включать файлы с инструкциями
-			"includeInferredRepository": true,
+	// 	// Автоматическое включение контекстных файлов
+	// 	"context": {
+	// 		// Автоматически включать файлы с инструкциями
+	// 		"includeInferredRepository": true,
 
-			// Файлы, которые всегда должны быть включены в контекст
-			"alwaysIncludeFiles": [
-				".cody/CODY_CONTEXT.md",
-				".cody/CODY_PROJECT_CONTEXT.md",
-				"README.md"
-			],
+	// 		// Файлы, которые всегда должны быть включены в контекст
+	// 		"alwaysIncludeFiles": [
+	// 			".cody/CODY_CONTEXT.md",
+	// 			".cody/CODY_PROJECT_CONTEXT.md",
+	// 			"README.md"
+	// 		],
 
-			// Максимальное количество файлов в контексте
-			"maxFiles": 20,
+	// 		// Максимальное количество файлов в контексте
+	// 		"maxFiles": 20,
 
-			// Автоматически искать файлы с инструкциями
-			"autoIncludeInstructions": true
-		}
-	},
+	// 		// Автоматически искать файлы с инструкциями
+	// 		"autoIncludeInstructions": true
+	// 	}
+	// },
 
 	"workbench.iconTheme": "vscode-icons",
 	"editor.inlineSuggest.suppressSuggestions": true,
@@ -499,27 +500,28 @@
 		AMP (Amplified Code) - это AI-помощник для разработки от компании Sourcegraph,
 		который предоставляет расширенные возможности для работы с кодом.
 	*/
-	"amp": {
-		// URL-адрес для подключения к сервису AMP
-		// По умолчанию используется официальный сервер Sourcegraph
-		"url": "https://ampcode.com/",
+	// Отключено для использования только Copilot. Для возврата — раскомментируйте.
+	// "amp": {
+	// 	// URL-адрес для подключения к сервису AMP
+	// 	// По умолчанию используется официальный сервер Sourcegraph
+	// 	"url": "https://ampcode.com/",
 
-		// Настройки пользовательского интерфейса
-		"ui": {
-			// Уровень масштабирования интерфейса AMP
-			// 1.2 = увеличение на 20% для лучшей читаемости
-			"zoomLevel": 1.2
-		},
+	// 	// Настройки пользовательского интерфейса
+	// 	"ui": {
+	// 		// Уровень масштабирования интерфейса AMP
+	// 		// 1.2 = увеличение на 20% для лучшей читаемости
+	// 		"zoomLevel": 1.2
+	// 	},
 
-		// Отключение уведомлений от AMP для минимизации отвлечений
-		// Соответствует общей политике отключения телеметрии в конфигурации
-		"notifications.enabled": false,
+	// 	// Отключение уведомлений от AMP для минимизации отвлечений
+	// 	// Соответствует общей политике отключения телеметрии в конфигурации
+	// 	"notifications.enabled": false,
 
-		// Список разрешенных команд для выполнения через AMP
-		// "timeout" - команда для управления таймаутами операций
-		// Ограниченный список команд повышает безопасность
-		"commands.allowlist": ["timeout"]
-	},
+	// 	// Список разрешенных команд для выполнения через AMP
+	// 	// "timeout" - команда для управления таймаутами операций
+	// 	// Ограниченный список команд повышает безопасность
+	// 	"commands.allowlist": ["timeout"]
+	// },
 
 	/*
 		Настройки для AI-ассистента Continue
@@ -531,5 +533,6 @@
 		"c:\\Users\\prof\\.vscode\\extensions\\continue.continue-1.0.19-win32-x64\\config-yaml-schema.json": [
 			".continue/**/*.yaml"
 		]
-	}
+	},
+	"workbench.secondarySideBar.defaultVisibility": "visible"
 }
