Добавить настройки Ollama сервера в конфигурацию чата

--- a/.AppData/Roaming/Code/User/settings.json
+++ b/.AppData/Roaming/Code/User/settings.json
@@ -134,6 +134,10 @@
 				"length": 500 // максимальная длина предложений
 			},
 			"chat": {
+				"byok": {
+					// Используйте свой Ollama сервер
+					"ollamaEndpoint": "http://192.168.10.222:11434"
+				},
 				"localeOverride": "ru",
 				"reviewSelection": {
 					"enabled": false
