Отформатировать файл manifest.json для улучшения читаемости

--- a/.AppData/Roaming/Code/User/mcp/context7/manifest.json
+++ b/.AppData/Roaming/Code/User/mcp/context7/manifest.json
@@ -1,1 +1,20 @@
-{"id":"context7","name":"context7","displayName":"Context7","description":"Get up-to-date, version-specific documentation and code examples from any library or framework.","publisher":"context7","publisherDisplayName":"Upstash","repositoryUrl":"https://github.com/upstash/context7","codicon":"codicon-book","manifest":{"packages":[{"registry_name":"npm","name":"@upstash/context7-mcp","version":"latest","runtime_arguments":[{"type":"named","name":"-y"}]}]}}
+{
+	"id": "context7",
+	"name": "context7",
+	"displayName": "Context7",
+	"description": "Get up-to-date, version-specific documentation and code examples from any library or framework.",
+	"publisher": "context7",
+	"publisherDisplayName": "Upstash",
+	"repositoryUrl": "https://github.com/upstash/context7",
+	"codicon": "codicon-book",
+	"manifest": {
+		"packages": [
+			{
+				"registry_name": "npm",
+				"name": "@upstash/context7-mcp",
+				"version": "latest",
+				"runtime_arguments": [{ "type": "named", "name": "-y" }]
+			}
+		]
+	}
+}
