Добавить настройки для игнорирования пробелов в конце строк и автоматического одобрения команд Git в терминале

--- a/.AppData/Roaming/Code/User/settings.json
+++ b/.AppData/Roaming/Code/User/settings.json
@@ -569,5 +569,22 @@
 	},
 	"[csv]": {
 		"editor.inlayHints.maximumLength": 0
+	},
+	"diffEditor.ignoreTrimWhitespace": true,
+	"chat.tools.terminal.autoApprove": {
+		"git rev-parse": true,
+		"git --no-pager diff --staged": {
+			"approve": true,
+			"matchCommandLine": true
+		}
+	},
+	"[dockercompose]": {
+		"editor.insertSpaces": true,
+		"editor.tabSize": 2,
+		"editor.autoIndent": "advanced",
+		"editor.defaultFormatter": "redhat.vscode-yaml"
+	},
+	"[github-actions-workflow]": {
+		"editor.defaultFormatter": "redhat.vscode-yaml"
 	}
 }
