--- a/.AppData/Roaming/Cursor/User/settings.json
+++ b/.AppData/Roaming/Cursor/User/settings.json
@@ -586,5 +586,8 @@
 	},
 	"[github-actions-workflow]": {
 		"editor.defaultFormatter": "redhat.vscode-yaml"
-	}
+	},
+	"editor.minimap.enabled": true,
+	"cursor.composer.textSizeScale": 1.3,
+	"workbench.activityBar.orientation": "vertical"
 }
