--- a/.AppData/Roaming/Cursor/User/settings.json
+++ b/.AppData/Roaming/Cursor/User/settings.json
@@ -569,5 +569,6 @@
 	},
 	"editor.minimap.enabled": true,
 	"cursor.composer.textSizeScale": 1.3,
-	"workbench.activityBar.orientation": "vertical"
+	"workbench.activityBar.orientation": "vertical",
+	"cursor.general.disableHttp2": true
 }
