--- a/.AppData/Roaming/Cursor/User/settings.json
+++ b/.AppData/Roaming/Cursor/User/settings.json
@@ -1,18 +1,18 @@
 {
 	"telemetry": {
-		"telemetryLevel": "off"
+		"telemetryLevel": "off",
 	},
 
 	"redhat": {
 		"telemetry": {
-			"enabled": false
-		}
+			"enabled": false,
+		},
 	},
 
 	"dotnetAcquisitionExtension": {
 		"telemetry": {
-			"enabled": false
-		}
+			"enabled": false,
+		},
 	},
 
 	"workbench.secondarySideBar.defaultVisibility": "visible",
@@ -23,24 +23,24 @@
 
 	"window": {
 		"title": "${activeEditorLong}${separator}${rootName}",
-		"titleSeparator": " — "
+		"titleSeparator": " — ",
 	},
 
 	"vsicons": {
-		"dontShowNewVersionMessage": true
+		"dontShowNewVersionMessage": true,
 	},
 
 	"locale": "ru",
 	"liveServer": {
 		"settings": {
-			"donotShowInfoMsg": true
-		}
+			"donotShowInfoMsg": true,
+		},
 	},
 
 	"terminal": {
 		"integrated": {
-			"gpuAcceleration": "off"
-		}
+			"gpuAcceleration": "off",
+		},
 	},
 
 	// Настройки Git в VS Code
@@ -50,8 +50,8 @@
 		"autofetch": true,
 		"fetchOnPull": true,
 		"commitMessageGeneration": {
-			"enabled": true
-		}
+			"enabled": true,
+		},
 	},
 
 	// Настройки SCM (Source Control Management)
@@ -60,36 +60,37 @@
 		"defaultViewMode": "tree",
 		"alwaysShowProviders": true,
 		"commitMessageGeneration": {
-			"provider": "copilot" // Включено для Copilot
+			"provider": "copilot", // Включено для Copilot
 			// Отключено для использования только Copilot. Для возврата — раскомментируйте.
 			// "provider": "cody",
 			// "useProjectContext": true
-		}
+		},
 	},
 
+	"editor.wordWrap": "on",
 	"editor": {
 		"detectIndentation": false,
 		"fontSize": 18,
 		"codeActionsOnSave": {
 			"source.fixAll": "explicit",
 			"source.organizeImports": "never",
-			"source.sortMembers": "explicit"
+			"source.sortMembers": "explicit",
 		},
 		"guides": {
-			"bracketPairs": true
+			"bracketPairs": true,
 		},
 		"tabSize": 2,
 		"insertSpaces": false,
 		"inlineSuggest": {
-			"suppressSuggestions": true
+			"suppressSuggestions": true,
 		},
 		"defaultFormatter": "esbenp.prettier-vscode",
 		"formatOnSave": true,
 		"tabCompletion": "on",
 		"linkedEditing": true,
 		"hover": {
-			"delay": 1000
-		}
+			"delay": 1000,
+		},
 	},
 
 	"files": {
@@ -97,12 +98,12 @@
 			"**/.terragrunt-cache": true,
 			"**/.cache": true,
 			"**/node_modules": true,
-			"**/vscode-chat-code-block": true
+			"**/vscode-chat-code-block": true,
 		},
 		"eol": "\r\n",
 		"associations": {
-			"*.ts": "typescript"
-		}
+			"*.ts": "typescript",
+		},
 	},
 
 	// Конфигурация чата (Copilot)
@@ -117,8 +118,8 @@
 		"useAgentsMdFile": true,
 		// Включение/отключение встроенного инструмента списка дел в чате
 		"todoListTool": {
-			"enabled": true
-		}
+			"enabled": true,
+		},
 	},
 
 	"git.openRepositoryInParentFolders": "never",
@@ -132,41 +133,41 @@
 					"/build/": true,
 					"/out/": true,
 					"/*.min.js": true,
-					"**/vscode-chat-code-block": true
+					"**/vscode-chat-code-block": true,
 				},
 				"ignoredFolders": {
 					"/node_modules": true,
 					"/dist": true,
 					"/build": true,
 					"/out": true,
-					"**/vscode-chat-code-block": true
+					"**/vscode-chat-code-block": true,
 				},
 				"debugOverrideEngine": "codegen",
 				"listCount": 5, // увеличьте для больше вариантов
 				"timeoutMs": 8000, // увеличьте таймаут для сложных запросов
-				"length": 500 // максимальная длина предложений
+				"length": 500, // максимальная длина предложений
 			},
 			"chat": {
 				"byok": {
 					// Используйте свой Ollama сервер
-					"ollamaEndpoint": "http://192.168.10.222:11434"
+					"ollamaEndpoint": "http://192.168.10.222:11434",
 				},
 				"localeOverride": "ru",
 				"reviewSelection": {
-					"enabled": false
+					"enabled": false,
 				},
 				"commitMessageGeneration": {
-					"enabled": true // Включено для Copilot
-				}
+					"enabled": true, // Включено для Copilot
+				},
 			},
 			"enable": {
 				"*": true,
 				"plaintext": false,
 				// "markdown": false,
 				"scminput": false,
-				"workspaceFolder": true
-			}
-		}
+				"workspaceFolder": true,
+			},
+		},
 	},
 
 	"indentRainbow": {
@@ -175,63 +176,68 @@
 			"rgba(255, 255,  64, 0.05)",
 			"rgba(127, 255, 127, 0.05)",
 			"rgba(255, 127, 255, 0.05)",
-			"rgba( 79, 236, 236, 0.05)"
-		]
+			"rgba( 79, 236, 236, 0.05)",
+		],
 	},
 
 	"[foxpro]": {
-		"files.encoding": "windows1251"
+		"files.encoding": "windows1251",
 	},
 
 	"[typescript]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
 	},
 	"[javascript]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
 	},
 	"[json]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
 	},
 	"[scss]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
 	},
 	"[yaml]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
 	},
 	"[css]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
 	},
 	"[bsl]": {
-		"editor.defaultFormatter": "1c-syntax.language-1c-bsl"
+		"editor.defaultFormatter": "1c-syntax.language-1c-bsl",
 	},
 
 	"search": {
-		"followSymlinks": false
+		"followSymlinks": false,
 	},
 
 	"typescript": {
 		"experimental": {
-			"expandableHover": true
-		}
+			"expandableHover": true,
+		},
 	},
 
 	"html": {
 		"hover": {
 			"references": false,
-			"documentation": false
-		}
+			"documentation": false,
+		},
 	},
 
 	"emmet": {
-		"triggerExpansionOnTab": true
+		"triggerExpansionOnTab": true,
 	},
 
 	"prettier": {
-		"useTabs": true
+		"useTabs": true,
+		"requireConfig": false,
+		"resolveGlobalModules": true,
+		"enable": true,
+		"documentSelectors": ["**/*"],
+		"ignorePath": ".prettierignore",
 	},
 
 	"notebook": {
-		"defaultFormatter": "esbenp.prettier-vscode"
+		"defaultFormatter": "esbenp.prettier-vscode",
 	},
 
 	"markdown.preview.breaks": true, // Одиночные переносы строк отображаются как <br>
@@ -264,8 +270,8 @@
 			// Настройки автодополнения
 			"comments": "on", // Включено в комментариях
 			"strings": "on", // Включено в строках
-			"other": "on" // Включено везде
-		}
+			"other": "on", // Включено везде
+		},
 	},
 
 	/*
@@ -539,36 +545,37 @@
 	*/
 	"yaml.schemas": {
 		"c:\\Users\\prof\\.vscode\\extensions\\continue.continue-1.0.19-win32-x64\\config-yaml-schema.json": [
-			".continue/**/*.yaml"
-		]
+			".continue/**/*.yaml",
+		],
 	},
 	"files.candidateGuessEncodings": ["windows1251"],
 	"rainbow_csv.highlight_rows": true,
 	"[csv (pipe)]": {
-		"editor.inlayHints.maximumLength": 0
+		"editor.inlayHints.maximumLength": 0,
 	},
 	"[csv]": {
-		"editor.inlayHints.maximumLength": 0
+		"editor.inlayHints.maximumLength": 0,
 	},
 	"diffEditor.ignoreTrimWhitespace": true,
 	"chat.tools.terminal.autoApprove": {
 		"git rev-parse": true,
 		"git --no-pager diff --staged": {
 			"approve": true,
-			"matchCommandLine": true
-		}
+			"matchCommandLine": true,
+		},
 	},
 	"[dockercompose]": {
 		"editor.insertSpaces": true,
 		"editor.tabSize": 2,
 		"editor.autoIndent": "advanced",
-		"editor.defaultFormatter": "redhat.vscode-yaml"
+		"editor.defaultFormatter": "redhat.vscode-yaml",
 	},
 	"[github-actions-workflow]": {
-		"editor.defaultFormatter": "redhat.vscode-yaml"
+		"editor.defaultFormatter": "redhat.vscode-yaml",
 	},
 	"editor.minimap.enabled": true,
 	"cursor.composer.textSizeScale": 1.3,
 	"workbench.activityBar.orientation": "vertical",
-	"cursor.general.disableHttp2": true
+	"window.commandCenter": true,
+	"cursor.cpp.disabledLanguages": ["plaintext", "scminput"],
 }
