--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@ node_modules
 dist
 dist-ssr
 
+# Покрытие тестов
+coverage
+
+# Playwright E2E
+playwright-report/
+test-results/
+
 # Каталоги и файлы редакторов
 # .vscode/*
 !.vscode/extensions.json
@@ -27,6 +34,7 @@ dist-ssr
 
 # Временные файлы
 *.~
+.git-commit-msg.txt
 
 # Конфиденциальные файлы и переменные окружения
 /.env
